handle mixed PUMAs (for year 2012-2016)

--- a/notebooks/region.yml
+++ b/notebooks/region.yml
@@ -1,17 +1,30 @@
-region: 
+year: 2015
+region:
   name: SEMCOG
   state: ["MI"]
-  counties: ["Oakland County", "Washtenaw County", "St. Clair County", "Livingston County", 
-              "Wayne County", "Macomb County", "Monroe County"]
+  counties:
+    [
+      "Oakland County",
+      "Washtenaw County",
+      "St. Clair County",
+      "Livingston County",
+      "Wayne County",
+      "Macomb County",
+      "Monroe County",
+    ]
+
 geographies:
   fips_file: "https://www2.census.gov/geo/docs/reference/codes/files/national_county.txt"
   tract_puma_file: "https://www2.census.gov/geo/docs/maps-data/data/rel/2010_Census_Tract_to_2010_PUMA.txt"
+  tract_puma0010_file: "preprocess/tract10_to_puma.csv" #tract10 to PUMA00 and PUMA10 crosswalk, from UrbanSim
+  # https://s3-us-west-1.amazonaws.com/synthpop-data2/tract10_to_puma.csv
+
 preprocess:
   folder: "preprocess/"
   pre_control: "controls_pre.csv"
-  h_pums_csv: "ACS/acs2017_psam_h26.csv"
-  p_pums_csv: "ACS/acs2017_psam_p26.csv"
-# PUMS data preparation
+  h_pums_csv: "ACS/ss{}hmi.csv"
+  p_pums_csv: "ACS/ss{}pmi.csv"
+# PUMS data preparation. for example:
 # 2017 ACS 5-year HHs;    https://www2.census.gov/programs-surveys/acs/data/pums/2017/5-Year/csv_hmi.zip
 # 2017 ACS 5-year Persons;    https://www2.census.gov/programs-surveys/acs/data/pums/2017/5-Year/csv_pmi.zip
-# change downloaded files to "acs2017_psam_h26.csv" and "acs2017_psam_p26.csv"
+# downloaded files and save to "preprocess/ACS"
