--- a/notebooks/region.yaml
+++ b/notebooks/region.yaml
@@ -1,5 +1,4 @@
-year: 2015
-
+year: 2013
 config: "./config/settings.yaml"
 
 data_folder: "data"
@@ -20,14 +19,15 @@ region:
 
 geographies:
   fips_file: "https://www2.census.gov/geo/docs/reference/codes/files/national_county.txt"
-  tract_puma_file: "https://www2.census.gov/geo/docs/maps-data/data/rel/2010_Census_Tract_to_2010_PUMA.txt"
+  #tract_puma_file: "https://www2.census.gov/geo/docs/maps-data/data/rel/2010_Census_Tract_to_2010_PUMA.txt"
+  tract_puma_file: "../preprocess/2010_Census_Tract_to_2010_PUMA.txt"
   tract_puma0010_file: "tract0010_to_puma.csv" #tract10 to PUMA00 and PUMA10 crosswalk, from UrbanSim
   # https://s3-us-west-1.amazonaws.com/synthpop-data2/tract10_to_puma.csv
 
 preprocess:
   folder: "preprocess/"
   settings_file: "semcog_res_settings.yaml"
-  pre_control: "controls_pre.csv"
+  pre_control: "controls_pre_tenind.csv"
   h_pums_csv: "ACS/ss{}hmi.csv"
   p_pums_csv: "ACS/ss{}pmi.csv"
 # PUMS data preparation. for example:
