--- a/configs/settings.yaml
+++ b/configs/settings.yaml
@@ -1,150 +1,114 @@
-####################################################################
-# PopulationSim Properties - Updated for Oakland Test
-####################################################################
-
-
-# Algorithm/Software Configuration
-# ------------------------------------------------------------------
-INTEGERIZE_WITH_BACKSTOPPED_CONTROLS: True
-SUB_BALANCE_WITH_FLOAT_SEED_WEIGHTS: False
-GROUP_BY_INCIDENCE_SIGNATURE: True
-USE_SIMUL_INTEGERIZER: True
-USE_CVXPY: False
+INTEGERIZE_WITH_BACKSTOPPED_CONTROLS: true
+SUB_BALANCE_WITH_FLOAT_SEED_WEIGHTS: false
+GROUP_BY_INCIDENCE_SIGNATURE: true
+USE_SIMUL_INTEGERIZER: true
+USE_CVXPY: false
 max_expansion_factor: 30
-
-
-# Geographic Settings
-# ------------------------------------------------------------------
-#geographies: [REGION, PUMA, TRACT, BLKGRP]
-geographies: [REGION,PUMA, BLKGRP]
+geographies:
+- REGION
+- PUMA
+- TRACT
+- BLKGRP
 seed_geography: PUMA
-
-
-# Tracing
-# ------------------------------------------------------------------
 trace_geography:
   BLKGRP: 261251620002
   TRACT: 26125162000
-
-  
-# Data Directory
-# ------------------------------------------------------------------
-data_dir: data
-
-
-# Input Data Tables
-# ------------------------------------------------------------------
-# input_pre_processor input_table_list
+data_dir: data/2019
 input_table_list:
-  - tablename: households
-    filename : oak_seed_households.csv
-    index_col: hh_id
-    column_map:
-      # not sure what SERIALNO is, but it is not unique
-      #SERIALNO: hh_id
-      hhnum: hh_id
-  - tablename: persons
-    # expression_filename: seed_persons_expressions.csv
-    filename : oak_seed_persons.csv
-    column_map:
-      # SERIALNO: hh_id
-      hhnum: hh_id
-      SPORDER: per_num # having SPORDER but no per_num?
-    # drop mixed type fields that appear to have been incorrectly generated
-    drop_columns:
- #     - indp02
- #     - naicsp02
- #     - occp02
- #     - socp00
- #     - occp10
- #     - socp10
- #     - indp07
- #     - naicsp07
-  - tablename: geo_cross_walk
-    filename : oak_geo_cross_walk.csv
-    column_map:
-      BLKGRPID: BLKGRP
-      #TRACTID: TRACT
-      PUMAID: PUMA
-     # COUNTYID: REGION
-  - tablename: BLKGRP_control_data
-    filename : oak_control_totals_blkgrp.csv
- # - tablename: TRACT_control_data
- #   filename : oak_control_totals_tract.csv
- # - tablename: REGION_control_data
-    #filename : control_totals_meta.csv
- #   filename : oak_control_totals_county.csv
-
-
-# Reserved Column Names
-# ------------------------------------------------------------------
+- tablename: households
+  filename: SEMCOG_2019_seed_households.csv
+  index_col: hh_id
+  column_map:
+    hhnum: hh_id
+- tablename: persons
+  filename: SEMCOG_2019_seed_persons.csv
+  column_map:
+    hhnum: hh_id
+    SPORDER: per_num
+  drop_columns: null
+- tablename: geo_cross_walk
+  filename: SEMCOG_2019_geo_cross_walk.csv
+  column_map:
+    BLKGRPID: BLKGRP
+    TRACTID: TRACT
+    PUMAID: PUMA
+- tablename: BLKGRP_control_data
+  filename: SEMCOG_2019_control_totals_blkgrp.csv
+  column_map:
+    BLKGRPID: BLKGRP
+    TRACTID: TRACT
+    PUMAID: PUMA
+- tablename: TRACT_control_data
+  filename: SEMCOG_2019_control_totals_tract.csv
+  column_map:
+    BLKGRPID: BLKGRP
+    TRACTID: TRACT
+    PUMAID: PUMA
 household_weight_col: WGTP
 household_id_col: hh_id
 total_hh_control: num_hh
-
-
-# Control Specification File Name
-# ------------------------------------------------------------------
-control_file_name: oak_controls.csv
-
-
-# Output Tables
-# ------------------------------------------------------------------
-# output_tables can specify either a list of output tables to include or to skip
-# if neither is specified, then no tables will be written
-
+control_file_name: SEMCOG_2019_controls.csv
 output_tables:
   action: include
   tables:
-    - summary_BLKGRP
-  #  - summary_TRACT
-    - summary_BLKGRP_PUMA
-    - expanded_household_ids
-
-
-# Synthetic Population Output Specification
-# ------------------------------------------------------------------
-#
-
+  - summary_TRACT
+  - summary_BLKGRP
 output_synthetic_population:
   household_id: household_id
   households:
     filename: synthetic_households.csv
     columns:
-      - NP
-      - VEH
-      - HINCP
-      - R18
-      - AGEHOH
-      - HRACE
-      - HHISP
-      - HWORKERS
-      - hh_id
+    - NP
+    - VEH
+    - HINCP
+    - R18
+    - AGEHOH
+    - HRACE
+    - HHISP
+    - HWORKERS
+    - hh_id
+    - ADJINC
+    - income
+    - NOC
+    - TYPE
+    - YBL
+    - BLD
+    - VALP
+    - GRNTP
+    - ADJHSG
+    - TEN
+    - HHT
   persons:
     filename: synthetic_persons.csv
     columns:
-      - hh_id
-      - per_num
-      - AGEP
-      - SEX
-      - RAC1P
-
-
-# Steps for base mode
-# ------------------------------------------------------------------
+    - hh_id
+    - per_num
+    - AGEP
+    - SEX
+    - ESR
+    - RAC1P
+    - RELP
+    - HISP
+    - NAICSP
+    - industry
+    - WKHP
+    - WKW
+    - SCHG
+    - MIL
+    - PINCP
+    - pincome
+    - RELSHIPP
 run_list:
   steps:
-    - input_pre_processor
-    - setup_data_structures
-    - initial_seed_balancing
-    - meta_control_factoring
-    - final_seed_balancing
-    - integerize_final_seed_weights
- #   - sub_balancing.geography=TRACT
-    - sub_balancing.geography=BLKGRP
-    - expand_households
-    - summarize
-    - write_tables
-    - write_synthetic_population
-
-  #resume_after: expand_households
+  - input_pre_processor
+  - setup_data_structures
+  - initial_seed_balancing
+  - meta_control_factoring
+  - final_seed_balancing
+  - integerize_final_seed_weights
+  - sub_balancing.geography=TRACT
+  - sub_balancing.geography=BLKGRP
+  - expand_households
+  - summarize
+  - write_tables
+  - write_synthetic_population
